modified lifespan text

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -52,7 +52,7 @@ print_info() {
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
     prin "Birth" "$(stat / | awk '/Birth: /{print $2 " " substr($3,1,5)}')"
-    prin "Days" "$(echo $days_diff)"
+    prin "Lifespan" "$(echo $days_diff days)"
 
     info cols
 }
