--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -376,7 +376,7 @@ enable_audio_bell no
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
- hide_window_decorations no
+ hide_window_decorations false
 
 #: Hide the window decorations (title-bar and window borders). Whether
 #: this works and exactly what effect it has depends on the window
@@ -489,7 +489,7 @@ tab_fade 1.0
 
 #: The foreground and background colors
 # 0.9
-background_opacity 1.00 
+background_opacity 1.0 
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -730,7 +730,7 @@ macos_thicken_font 0.3
 #: on both light and dark backgrounds. WARNING: this might make your
 #: mouse cursor invisible on dual GPU machines.
 
- linux_display_server x11
+# linux_display_server x11
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
